<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recipe_feed_image"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="center"
            android:src="@drawable/testimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recipe_feed_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/recipe_feed_image"
            android:maxLines="3"
            android:text="Chocolate chip Expresso Cookies"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/recipe_feed_prepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"

            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/recipe_feed_image"
            android:text="@string/prep_time"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_feed_rating_bar" />

        <TextView
            android:id="@+id/recipe_feed_prepTime_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_feed_prepTime"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/recipe_feed_image"
            android:text="10 minutes"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_feed_prepTime" />

        <TextView
            android:id="@+id/recipe_feed_cookTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_feed_prepTime_value"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/recipe_feed_image"
            android:text="@string/cook_time"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_feed_prepTime_value" />

        <TextView
            android:id="@+id/recipe_feed_cookTime_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/recipe_feed_image"
            android:layout_marginStart="16dp"
            android:text="16 minutes"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_feed_cookTime" />

        <RatingBar
            android:id="@+id/recipe_feed_rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_feed_title"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintStart_toEndOf="@+id/recipe_feed_image"
            app:layout_constraintTop_toBottomOf="@+id/recipe_feed_title" />

        <Button
            android:id="@+id/recipe_feed_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:text="@string/more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>